--- a/git_note/远程分支.md
+++ b/git_note/远程分支.md
@@ -19,3 +19,20 @@ git remote -v
 ```
 
 [什么是 origin](https://www.zhihu.com/question/27712995)
+## 什么是 origin
+```bash
+git clone https://github.com/user1/repository
+
+git remote -v
+# `origin` https://github.com/user1/repository.git (fetch)
+# `origin` https://github.com/user1/repository.git（push）
+
+# 假如在服务器上 fork 了此仓库，叫user2，本地想同时关联这两个仓库
+git remote add upstream https://github.com/user2/repository.git
+
+git remove -v
+# `origin` https://github.com/user1/repository.git (fetch)
+# `origin` https://github.com/user1/repository.git（push）
+# `upstream` https://github.com/user2/repository.git (fetch)
+# `upstream` https://github.com/user2/repository.git（push）
+```
